finished setting up documentation
