# routes/postRoute.js
@@ -2,7 +2,7 @@ const express = require("express");
 const validateToken = require("../middlewares/validateTokenHandler");
 const { getAllPosts, createPost, getPost, searchPosts, feed, updatePost, deletePost } = require("../controllers/postController");
 const { likePost, fetchLikes } = require("../controllers/likeController");
-const { getAllComments, createComment } = require("../controllers/commentController");
+const { getAllComments, createComment, updateComment, deleteComment, getComment } = require("../controllers/commentController");
 const {uploadImagesToCloudinary} = require("../middlewares/uploadToCloudinary");
 const multer = require('multer');
 
@@ -25,6 +25,11 @@ router.route("/:postID/like")
 router.route('/:postID/comments')
     .post(validateToken,createComment)
     .get(getAllComments)
+
+router.route('/:postID/comments/:commentId')
+    .put(validateToken,updateComment)
+    .get(getComment)
+    .delete(validateToken,deleteComment)
 
 router.route("/:postID")
     .get(validateToken,getPost)
